AVIARY-4144 - fix: Timestamps cant be out of bound error fix | AVIARY-4145 - fix: Show malformed CSV error on frontend

--- a/app/assets/stylesheets/interview.scss
+++ b/app/assets/stylesheets/interview.scss
@@ -310,7 +310,7 @@ div#noMediaConnection {
     }
 
     .video-placeholder {
-      height: 244px;
+      max-height: 244px;
 
       .video-js {
         height: 244px;
